--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 URP Project LTS Version/Assets/SimpleNaturePack/SimpleNaturePack_2020.3_HDRP_v1.24.unitypackage.meta
 URP Project LTS Version/Assets/SimpleNaturePack/SimpleNaturePack_2020.3_URP_v1.24.unitypackage.meta
+URP Project LTS Version/Assets/DenemeAmacli.unitypackage.meta
